# AGB_Amazon_TUM

./: LICENSE  README.md  infer.py  pyproject.toml  requirements.txt
biomass/: data.py  losses.py  models.py
biomass_density_esa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/hf/biomass_tiles_320_pt/: summary.json
data/hf/biomass_tiles_320_pt/tile_000000/: bands.json  meta.pt  sd.pt  valid_mask.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000001/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000002/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000003/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000004/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000005/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000006/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000007/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data/hf/biomass_tiles_320_pt/tile_000008/: bands.json  meta.pt  sd.pt  x.pt  y.pt
data_processing/: tif2pt.py  tiles_download.py
experiments/: baseline_frozen.sh  finetune_encoder.sh  quick_debug.sh  random_split.sh  refiner.sh  refiner_sd_weighted.sh  repeated_spatial_blocks_for_UQ.sh  sd_weighted_loss.sh
scripts/: summarize_repeated_runs.py  train_eval.py
train_val_infer/: infer_all_tiles.sh  infer_and_viz_1_tile.sh  train_SD_weighted.sh  train_baseline.sh  train_finetune_encoder.sh  train_with_refiner.sh
(+1997 files in other folders)
